--- a/pages/form.html
+++ b/pages/form.html
@@ -1,144 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apply for a New Pass – Click2Pass</title>
     <link rel="stylesheet" href="../css/style1.css" />
     <link rel="stylesheet" href="../css/form-style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-</head>
-<body>
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <nav class="top-navbar">
-        <div class="nav-container">
-            <div class="logo">
-                <h2>Click<span>2Pass</span></h2>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="form.html" class="active">Apply Pass</a></li>
-                <li><a href="renew-pass.html">Renew Pass</a></li>
-                <li><a href="my-passes.html">My Passes</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <div class="nav-actions">
-                <a href="login.html" class="btn-login">Login</a>
-            </div>
+      <div class="nav-container">
+        <div class="logo">
+          <h2>Click<span>2Pass</span></h2>
         </div>
+        <ul class="nav-menu">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="form.html" class="active">Apply Pass</a></li>
+          <li><a href="renew-pass.html">Renew Pass</a></li>
+          <li><a href="my-passes.html">My Passes</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="nav-actions">
+          <a href="login.html" class="btn-login">Login</a>
+        </div>
+      </div>
     </nav>
 
     <div class="form-container">
-        <div class="form-card">
-            <h2 class="form-title">Apply for a New Pass</h2>
-            <p class="form-subtitle">Fill in the details below to generate your pass.</p>
+      <div class="form-card">
+        <h2 class="form-title">Apply for a New Pass</h2>
+        <p class="form-subtitle">
+          Fill in the details below to generate your pass.
+        </p>
 
-            <form action="payment.html"> 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="from-station">From Station</label>
-                        <input type="text" id="from-station" placeholder="Enter starting stop" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="to-station">To Station</label>
-                        <input type="text" id="to-station" placeholder="Enter destination stop" required />
-                    </div>
-                </div>
+        <form action="payment.html">
+          <div class="form-row">
+            <div class="form-group">
+              <label for="from-station">From Station</label>
+              <input
+                type="text"
+                id="from-station"
+                placeholder="Enter starting stop"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="to-station">To Station</label>
+              <input
+                type="text"
+                id="to-station"
+                placeholder="Enter destination stop"
+                required
+              />
+            </div>
+          </div>
 
-                <div class="form-group">
-                    <label>Select Pass Type</label>
-                    <div class="radio-group">
-                        <label><input type="radio" name="pass-type" value="daily" checked> Daily</label>
-                        <label><input type="radio" name="pass-type" value="weekly"> Weekly</label>
-                        <label><input type="radio" name="pass-type" value="monthly"> Monthly</label>
-                    </div>
-                </div>
+          <div class="form-group">
+            <label>Select Pass Type</label>
+            <div class="radio-group">
+              <label
+                ><input type="radio" name="pass-type" value="daily" checked />
+                Daily</label
+              >
+              <label
+                ><input type="radio" name="pass-type" value="weekly" />
+                Weekly</label
+              >
+              <label
+                ><input type="radio" name="pass-type" value="monthly" />
+                Monthly</label
+              >
+            </div>
+          </div>
 
-                <div class="form-group">
-                    <label for="category">Select Category</label>
-                    <select id="category" required>
-                        <option value="general">General</option>
-                        <option value="student">Student</option>
-                        <option value="senior">Senior Citizen</option>
-                        <option value="family">Family</option>
-                        <option value="corporate">Corporate</option>
-                    </select>
-                </div>
+          <div class="form-group">
+            <label for="category">Select Category</label>
+            <select id="category" required>
+              <option value="general">General</option>
+              <option value="student">Student</option>
+              <option value="senior">Senior Citizen</option>
+              <option value="family">Family</option>
+              <option value="corporate">Corporate</option>
+            </select>
+          </div>
 
-                <div class="form-group">
-                    <label for="id-proof">Upload ID Proof (for Student/Senior)</label>
-                    <input type="file" id="id-proof" accept="image/*,.pdf" />
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="start-date">Start Date</label>
-                        <input type="date" id="start-date" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="end-date">End Date</label>
-                        <input type="date" id="end-date" required />
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    <label for="address">Delivery Address (for physical pass)</label>
-                    <textarea id="address" placeholder="Enter your full mailing address"></textarea>
-                </div>
+          <div class="form-group">
+            <label for="id-proof">Upload ID Proof (for Student/Senior)</label>
+            <input type="file" id="id-proof" accept="image/*,.pdf" />
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="start-date">Start Date</label>
+              <input type="date" id="start-date" required />
+            </div>
+            <div class="form-group">
+              <label for="end-date">End Date</label>
+              <input type="date" id="end-date" required />
+            </div>
+          </div>
 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="city">City</label>
-                        <input type="text" id="city" placeholder="Enter your city" />
-                    </div>
-                    <div class="form-group">
-                        <label for="pincode">Pincode</label>
-                        <input type="text" id="pincode" placeholder="Enter 6-digit pincode" maxlength="6" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox-group">
-                        <label><input type="checkbox" name="auto-renew"> Enable Auto-Renew</label>
-                    </div>
-                </div>
+          <div class="form-group">
+            <label for="address">Delivery Address (for physical pass)</label>
+            <textarea
+              id="address"
+              placeholder="Enter your full mailing address"
+            ></textarea>
+          </div>
 
-                <button type="submit" class="btn-primary">Proceed to Pay & Apply</button>
-            </form>
-        </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="city">City</label>
+              <input type="text" id="city" placeholder="Enter your city" />
+            </div>
+            <div class="form-group">
+              <label for="pincode">Pincode</label>
+              <input
+                type="text"
+                id="pincode"
+                placeholder="Enter 6-digit pincode"
+                maxlength="6"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="checkbox-group">
+              <label
+                ><input type="checkbox" name="auto-renew" /> Enable
+                Auto-Renew</label
+              >
+            </div>
+          </div>
+
+          <button type="submit" class="btn-primary">
+            Proceed to Pay & Apply
+          </button>
+        </form>
+      </div>
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-col">
-                <h3>Click<span>2Pass</span></h3>
-                <p>Your trusted platform for instant bus passes and seamless commuting.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Support</h4>
-                <ul>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">FAQs</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
-                <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
-            </div>
+      <div class="footer-container">
+        <div class="footer-col">
+          <h3>Click<span>2Pass</span></h3>
+          <p>
+            Your trusted platform for instant bus passes and seamless commuting.
+          </p>
         </div>
-        <div class="footer-bottom">
-            <p>© 2025 Click2Pass. All rights reserved.</p>
+        <div class="footer-col">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
         </div>
+        <div class="footer-col">
+          <h4>Support</h4>
+          <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Contact</h4>
+          <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
+          <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>© 2025 Click2Pass. All rights reserved.</p>
+      </div>
     </footer>
-
-</body>
+  </body>
 </html>
