--- a/pages/my-passes.html
+++ b/pages/my-passes.html
@@ -1,143 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Passes – Click2Pass</title>
     <link rel="stylesheet" href="../css/style1.css" />
     <link rel="stylesheet" href="../css/my-passes-style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-</head>
-<body>
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <nav class="top-navbar">
-        <div class="nav-container">
-            <div class="logo">
-                <h2>Click<span>2Pass</span></h2>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="form.html">Apply Pass</a></li>
-                <li><a href="renew-pass.html">Renew Pass</a></li>
-                <li><a href="my-passes.html" class="active">My Passes</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <div class="nav-actions">
-                <a href="login.html" class="btn-login">Login</a>
-            </div>
+      <div class="nav-container">
+        <div class="logo">
+          <h2>Click<span>2Pass</span></h2>
         </div>
+        <ul class="nav-menu">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="form.html">Apply Pass</a></li>
+          <li><a href="renew-pass.html">Renew Pass</a></li>
+          <li><a href="my-passes.html" class="active">My Passes</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="nav-actions">
+          <a href="login.html" class="btn-login">Login</a>
+        </div>
+      </div>
     </nav>
 
     <div class="main-layout">
-        <main class="content">
+      <main class="content">
+        <section class="my-passes-section">
+          <h2 class="section-title">My Active Passes</h2>
 
-            <section class="my-passes-section">
-                <h2 class="section-title">My Active Passes</h2>
-                
-                <div class="ticket-card">
-                    <div class="ticket-main">
-                        <h3>Monthly Pass (General)</h3>
-                        <p class="route">Central Station &harr; Tech Park</p>
-                        <div class="details">
-                            <div>
-                                <p>Valid From</p>
-                                <strong>01 Nov 2025</strong>
-                            </div>
-                            <div>
-                                <p>Valid Until</p>
-                                <strong>30 Nov 2025</strong>
-                            </div>
-                        </div>
-                        <div class="ticket-actions">
-                            <a href="renew-pass.html" class="btn-renew">Renew Now</a>
-                        </div>
-                    </div>
-                    <div class="ticket-qr">
-                        <i class="fas fa-qrcode qr-code"></i>
-                        <span class="pass-id">P-1234567</span>
-                    </div>
+          <div class="ticket-card">
+            <div class="ticket-main">
+              <h3>Monthly Pass (General)</h3>
+              <p class="route">Central Station &harr; Tech Park</p>
+              <div class="details">
+                <div>
+                  <p>Valid From</p>
+                  <strong>01 Nov 2025</strong>
                 </div>
-
-                <div class="ticket-card">
-                    <div class="ticket-main">
-                        <h3>Daily Pass (AC Bus)</h3>
-                        <p class="route">Airport &harr; Downtown</p>
-                        <div class="details">
-                            <div>
-                                <p>Valid For</p>
-                                <strong>13 Nov 2025</strong>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ticket-qr">
-                        <i class="fas fa-qrcode qr-code"></i>
-                        <span class="pass-id">P-4567890</span>
-                    </div>
+                <div>
+                  <p>Valid Until</p>
+                  <strong>30 Nov 2025</strong>
                 </div>
+              </div>
+              <div class="ticket-actions">
+                <a href="renew-pass.html" class="btn-renew">Renew Now</a>
+              </div>
+            </div>
+            <div class="ticket-qr">
+              <i class="fas fa-qrcode qr-code"></i>
+              <span class="pass-id">P-1234567</span>
+            </div>
+          </div>
 
-            </section>
-
-            <section class="expired-passes-section">
-                <h2 class="section-title">Expired Passes</h2>
-
-                <div class="ticket-card expired">
-                    <div class="ticket-main">
-                        <h3>Monthly Pass (Student)</h3>
-                        <p class="route">University &harr; City Center</p>
-                        <div class="details">
-                            <div>
-                                <p>Expired On</p>
-                                <strong>31 Oct 2025</strong>
-                            </div>
-                        </div>
-                         <div class="ticket-actions">
-                            <a href="renew-pass.html" class="btn-renew">Renew Pass</a>
-                        </div>
-                    </div>
-                    <div class="ticket-qr">
-                        <i class="fas fa-qrcode qr-code"></i>
-                        <span class="pass-id">P-0987654</span>
-                    </div>
+          <div class="ticket-card">
+            <div class="ticket-main">
+              <h3>Daily Pass (AC Bus)</h3>
+              <p class="route">Airport &harr; Downtown</p>
+              <div class="details">
+                <div>
+                  <p>Valid For</p>
+                  <strong>13 Nov 2025</strong>
                 </div>
+              </div>
+            </div>
+            <div class="ticket-qr">
+              <i class="fas fa-qrcode qr-code"></i>
+              <span class="pass-id">P-4567890</span>
+            </div>
+          </div>
+        </section>
 
-            </section>
+        <section class="expired-passes-section">
+          <h2 class="section-title">Expired Passes</h2>
 
-        </main>
+          <div class="ticket-card expired">
+            <div class="ticket-main">
+              <h3>Monthly Pass (Student)</h3>
+              <p class="route">University &harr; City Center</p>
+              <div class="details">
+                <div>
+                  <p>Expired On</p>
+                  <strong>31 Oct 2025</strong>
+                </div>
+              </div>
+              <div class="ticket-actions">
+                <a href="renew-pass.html" class="btn-renew">Renew Pass</a>
+              </div>
+            </div>
+            <div class="ticket-qr">
+              <i class="fas fa-qrcode qr-code"></i>
+              <span class="pass-id">P-0987654</span>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
 
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-col">
-                <h3>Click<span>2Pass</span></h3>
-                <p>Your trusted platform for instant bus passes and seamless commuting.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Support</h4>
-                <ul>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">FAQs</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
-                <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
-            </div>
+      <div class="footer-container">
+        <div class="footer-col">
+          <h3>Click<span>2Pass</span></h3>
+          <p>
+            Your trusted platform for instant bus passes and seamless commuting.
+          </p>
         </div>
-        <div class="footer-bottom">
-            <p>© 2025 Click2Pass. All rights reserved.</p>
+        <div class="footer-col">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
         </div>
+        <div class="footer-col">
+          <h4>Support</h4>
+          <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Contact</h4>
+          <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
+          <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>© 2025 Click2Pass. All rights reserved.</p>
+      </div>
     </footer>
-
-</body>
+  </body>
 </html>
